# chess-engine

./: .gitignore  CMakeLists.txt  README.md  chess-engine.cpp
Chess/: CMakeLists.txt  GameManager.cpp  GameManager.h
Chess/AI/: AI.cpp  AI.h  Book.cpp  Book.h  BookParser.cpp  BookParser.h  CMakeLists.txt  Evaluation.cpp  Evaluation.h  PieceSquareTables.h  Search.cpp  Search.h  Sort.h
Chess/AI/Books/: LichessBook.txt  MasterBook.txt
Chess/Core/: CMakeLists.txt  ChessBoard.h  ChessBoardConsts.h  ChessBoardCore.cpp  ChessBoardMasks.cpp  ChessBoardMoves.cpp  Debug.h  GameState.h  Masks.h  Move.h  Pieces.h  Zobrist.cpp  Zobrist.h
Tests/: CMakeLists.txt  Tests.cpp  Tests.h
UI/: AssetManager.h  CMakeLists.txt  Game.cpp  Game.h  GameDraw.cpp  Utils.cpp  Utils.h
UI/Clipboard/: CMakeLists.txt  Clipboard.cpp  Clipboard.h
UI/Components/: Arrow.cpp  Arrow.h  Button.h  CMakeLists.txt  FunctionalButton.h  Input.h  ToggleButton.h  ToggleTextButton.h
